fixed alignment issues.

--- a/ghost-api-ui/src/Components/Footer/Footer.css
+++ b/ghost-api-ui/src/Components/Footer/Footer.css
@@ -1,23 +1,25 @@
 .footer{
-    margin: 0;
-    padding: 3px 80px;
     background-color: #1847dd;
     color:#FFFFFF;
     font-family: Arial, Helvetica, sans-serif;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 
 }
 .social{
     display: flex;
-    justify-content: space-between;
+    align-items: center;
 }
 .social ul{
     list-style-type: none;
     display: flex;
-    justify-content: space-between;
+    align-items: center;
 }
 .social ul li{
-    display: flex;
-    width: 90px;
+    margin-right: 150px;
+}
+
+.info{
+    margin-left: 70px;
 }
